<resources>
    <string name="app_name">Shikimori Android</string>
    <string name="bottom_nav_anime_list_title">Список</string>
    <string name="bottom_nav_profile_title">Профиль</string>
    <string name="bottom_nav_settings_title">Настройки</string>
    <string name="anime_page_name_prefix">Название:</string>
    <string name="anime_page_episodes">Эпизоды:</string>
    <string name="anime_page_type">Тип:</string>
    <string name="main_list_menu_search">Поиск</string>
    <string name="main_list_menu_filter">Фильтр</string>
    <string name="anime_basic_info_duration">Длительность эпизода:</string>
    <string name="anime_basic_info_rating">Рейтинг:</string>
    <string name="anime_basic_info_status">Статус:</string>
    <string name="anime_status_ongoing">Онгоинг</string>
    <string name="anime_status_released">Вышло</string>
    <string name="anime_status_anons">Анонс</string>
    <string name="anime_page_spinner_hint">Добавить в список</string>
    <string name="get_auth_code">Получить код авторизации</string>
    <string name="input_auth_code">Код авторизации</string>
    <string name="auth_button">Авторизироваться</string>
    <string name="profile_planned">Запланировано:</string>
    <string name="profile_complete">Просмотрено:</string>
    <string name="profile_watching">Смотрю:</string>
    <string name="profile_on_hold">Отложено:</string>
    <string name="profile_dropped">Брошено:</string>
    <string name="profile_user_list">Список аниме</string>
    <string name="header_user_list_name">Название</string>
    <string name="header_user_list_kind">Тип</string>
    <string name="header_user_list_episodes">Эпизоды</string>
    <string name="header_user_list_score">Оценка</string>
    <string name="save">Сохранить</string>
    <string name="add_in_my_list">Добавить в список</string>
    <string name="edit_in_my_list">Изменить в списке</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="character_rus_name_prefix">По-русски:</string>
    <string name="character_jap_name_prefix">По-японски:</string>
    <string name="character_alter_names_prefix">Прочие:</string>
    <string name="person_eng_name_prefix">По-английски:</string>
    <string name="person_birth_date_prefix">Дата рождения:</string>
    <string name="person_job_prefix">Работа:</string>
    <string name="success_post">Данные сохранены</string>
    <string name="empty_view">Пустое поле</string>

    <!--  Headline titles  -->
    <string name="other_sources_headline_title">Другие источники</string>
    <string name="character_names_headline_title">Имена</string>
    <string name="users_rates_headline_title">Оценки людей</string>
    <string name="users_statuses_headline_title">В списках у людей</string>
    <string name="screenshots_headline_title">Кадры</string>
    <string name="description_headline_title">Описание</string>
    <string name="main_info_headline_title">Информация</string>
    <string name="global_rating_headline_title">Рейтинг</string>
    <string name="authors_headline_title">Авторы</string>
    <string name="main_characters_headline_title">Главные герои</string>
    <string name="support_characters_headline_title">Второстепенные герои</string>
    <string name="person_roles_headline_title">Роли в аниме</string>
    <string name="user_anime_statuses_headline_title">Аниме статистика</string>
    <string name="user_activity_headline_title">Активность</string>
    <string name="user_history_headline_title">История</string>

    <!--  Settings  -->
    <string name="description_id">description</string>
    <string name="screenshots_id">screenshots</string>
    <string name="exit_id">exit</string>
    <string name="description_settings_summary">Отображать описание</string>
    <string name="screenshots_settings_summary">Отображать кадры</string>
    <string name="sign_out_settings">Выйти из аккаунта</string>
    <string name="pref_category_anime">Аниме</string>
    <string name="pref_category_app">Приложение</string>

    <!--  Arrays  -->
    <string-array name="rating_notice_array">
        <item>Хуже некуда</item>
        <item>Ужасно</item>
        <item>Очень плохо</item>
        <item>Плохо</item>
        <item>Более-менее</item>
        <item>Нормально</item>
        <item>Хорошо</item>
        <item>Отлично</item>
        <item>Великолепно</item>
        <item>Эпик вин!</item>
    </string-array>

    <string-array name="user_anime_statuses">
        <item>Просмотрено</item>
        <item>Брошено</item>
        <item>Отложено</item>
        <item>Запланировано</item>
        <item>Смотрю</item>
    </string-array>

    <string-array name="user_profile_anime_statuses">
        <item>Запланировано</item>
        <item>Смотрю</item>
        <item>Просмотрено</item>
        <item>Отложено</item>
        <item>Брошено</item>
    </string-array>

    <string-array name="user_anime_statuses_json">
        <item>completed</item>
        <item>dropped</item>
        <item>on_hold</item>
        <item>planned</item>
        <item>watching</item>
    </string-array>

    <string-array name="anime_page_person_filter">
        <item>Автор оригинала</item>
        <item>Режиссёр</item>
    </string-array>

    <string-array name="anime_page_character_filter">
        <item>Main</item>
    </string-array>
</resources>