<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="8dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header_user_list_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/type"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="@string/header_user_list_kind"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/episodes"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:text="@string/header_user_list_episodes"
        android:textStyle="bold"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/type"/>

    <TextView
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="@string/header_user_list_score"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/episodes"/>


</androidx.constraintlayout.widget.ConstraintLayout>