<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="8dp">

    <com.jaredrummler.materialspinner.MaterialSpinner
        android:id="@+id/status_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:hint="@string/anime_page_spinner_hint"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/header_user_list_episodes"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/status_spinner"
        app:layout_constraintEnd_toEndOf="@id/status_spinner"
        app:layout_constraintStart_toStartOf="@id/status_spinner">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/episodes_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="4"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <RatingBar
        android:id="@+id/rating_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout"
        app:layout_constraintStart_toStartOf="@id/textInputLayout"
        android:max="10"
        />

    <TextView
        android:id="@+id/rating_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/rating_bar"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout"
        app:layout_constraintBottom_toBottomOf="@id/rating_bar"
        tools:text="9"
        android:textSize="32sp"
        android:layout_marginStart="8dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/rating_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="4dp"
        android:text="@string/save"/>

</androidx.constraintlayout.widget.ConstraintLayout>