<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include
        android:id="@+id/headline"
        layout="@layout/headline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/headline"
        app:layout_constraintStart_toStartOf="@id/headline"
        app:layout_constraintEnd_toEndOf="@id/headline"
        android:layout_marginHorizontal="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anime_page_name_prefix"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/anime_page_name_rus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="viewStart"
                tools:text="Anime Name"
                android:layout_marginStart="3dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anime_page_type"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/anime_page_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="viewStart"
                tools:text="tv"
                android:layout_marginStart="3dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/episodes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anime_page_episodes"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/anime_page_episodes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="viewStart"
                tools:text="12"
                android:layout_marginStart="3dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/episodes_aired"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anime_page_episodes"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/anime_page_episodes_aired"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="viewStart"
                tools:text="12"
                android:layout_marginStart="3dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="/"/>

            <TextView
                android:id="@+id/anime_page_episodes_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="viewStart"
                tools:text="-"
                android:layout_marginStart="3dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/anime_info_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anime_basic_info_status"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="viewStart"
                tools:text="Онгоинг"
                android:layout_marginStart="3dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/anime_page_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anime_basic_info_duration"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="viewStart"
                tools:text="12"
                android:layout_marginStart="3dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="viewStart"
                android:text="мин."
                android:layout_marginStart="3dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/anime_info_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anime_basic_info_rating"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="viewStart"
                tools:text="PG-13"
                android:layout_marginStart="3dp"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>